grafana/grafana-statefulset-emptydir.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    k8s-app: grafana
spec:
  ports:
  - port: 3000
  clusterIP: None
  selector:
    k8s-app: grafana
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana
spec:
  selector:
    matchLabels:
      k8s-app: grafana # has to match .spec.template.metadata.labels
  serviceName: "grafana"
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: grafana # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: grafana
        image: grafana/grafana:4.6.0-beta2
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: data
          mountPath: /var/lib/grafana
          readOnly: false
      volumes:
      - emptyDir: {}
        name: data
